# CompMath

./: .gitignore  LICENSE
FMAlgo/: CMakeLists.txt
FMAlgo/src/: algo.cpp  algo.h  gaincontainer.cpp  gaincontainer.h  hypergraph.cpp  hypergraph.h  main.cpp  out.h
algorithm/: readme.txt
algorithm/examples/: Before_Dijkstra.dot  Before_Dijkstra_002.dot  Before_Prim_001.dot  DotToPng.rb  RBtree_001.dot  RBtree_002.dot  Result001_Dijkstra.dot  Result002_Dijkstra.dot  Result_Dijkstra_001.dot  Result_Dijkstra_002.dot  Result_Prim_001.dot  Result_Prim_002.dot
algorithm/src/: Graph.cpp  Graph.h  Node.cpp  Node.h  RBtree.h  main.cpp
lab1/src/: Matrix.cpp  Matrix.h  vs2017project.cpp
lab2/src/: function.cpp  function.h  main.cpp
lab3/src/: function.cpp  function.h  main.cpp
life/src/: Calculate.cpp  Cell.h  Master.cpp  Master.h  Slave.cpp  Slave.h  Slaves.cpp  Universe.h  main.cpp
stiff_eq/src/: RungeKutta.cpp  main.cpp  video.h
